Changes to this file meant to have been included with previous commit to this ticket. Refs #1132

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -16,6 +16,9 @@ plugins.directory = .
 # Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
+# Where to load parameter definition files from
+parameterDefinition.directory = ../../../../Test/Instrument
+
 # Location of Python scripts that are required for certain aspects of Mantid to function
 # correctly, i.e. customized interfaces
 #
