Implementing code for excluding sub-parts of components defined in IDFs
<component type="door"> 
  <location x="0"> 
    <exclude sub-part="tube7"/> <exclude sub-part="tube8"/> 
  </location> <location x="1" /> <location x="2" /> <location x="3"> 
    <exclude sub-part="tube3"/> 
  </location> 
</component> 

Refs #1180

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -277,6 +277,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadRawBin0.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\LoadRawHelper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRKH.cpp"
 				>
 			</File>
@@ -524,6 +532,18 @@
 			</File>
 			<File
 				RelativePath=".\test\LoadRaw3Test.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadRawBin0.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\LoadRawBin0Test.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadRawHelper.h"
 				>
 			</File>
 			<File
