openmp flag was missing from Eclipse project file for Kernel & Geometry packages. Re #1209.

--- a/Code/Mantid/DataObjects/.cproject
+++ b/Code/Mantid/DataObjects/.cproject
@@ -35,7 +35,7 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Geometry/inc}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/API/inc}&quot;"/>
 </option>
-<option id="gnu.cpp.compiler.option.other.other.1679490237" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC" valueType="string"/>
+<option id="gnu.cpp.compiler.option.other.other.1679490237" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC -fopenmp" valueType="string"/>
 <option id="gnu.cpp.compiler.option.debugging.gprof.1105062893" name="Generate gprof information (-pg)" superClass="gnu.cpp.compiler.option.debugging.gprof" value="false" valueType="boolean"/>
 <option id="gnu.cpp.compiler.option.warnings.pedantic.1929258661" name="Pedantic (-pedantic)" superClass="gnu.cpp.compiler.option.warnings.pedantic" value="false" valueType="boolean"/>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1876512424" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
@@ -526,7 +526,7 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Geometry/inc}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/API/inc}&quot;"/>
 </option>
-<option id="gnu.cpp.compiler.option.other.other.651043195" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC" valueType="string"/>
+<option id="gnu.cpp.compiler.option.other.other.651043195" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC -fopenmp" valueType="string"/>
 <option id="gnu.cpp.compiler.option.warnings.pedantic.962048799" name="Pedantic (-pedantic)" superClass="gnu.cpp.compiler.option.warnings.pedantic" value="false" valueType="boolean"/>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1580238584" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
