--- a/Code/Mantid/Kernel/.cproject
+++ b/Code/Mantid/Kernel/.cproject
@@ -32,7 +32,7 @@
 <option id="gnu.cpp.compiler.option.include.paths.1463378995" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Kernel/inc}&quot;"/>
 </option>
-<option id="gnu.cpp.compiler.option.other.other.1373785853" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC" valueType="string"/>
+<option id="gnu.cpp.compiler.option.other.other.1373785853" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC -fopenmp" valueType="string"/>
 <option id="gnu.cpp.compiler.option.warnings.pedantic.1262267217" name="Pedantic (-pedantic)" superClass="gnu.cpp.compiler.option.warnings.pedantic" value="true" valueType="boolean"/>
 <option id="gnu.cpp.compiler.option.debugging.gprof.1706723409" name="Generate gprof information (-pg)" superClass="gnu.cpp.compiler.option.debugging.gprof" value="false" valueType="boolean"/>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1075197576" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
@@ -517,7 +517,7 @@
 <option id="gnu.cpp.compiler.option.include.paths.1154455208" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Kernel/inc}&quot;"/>
 </option>
-<option id="gnu.cpp.compiler.option.other.other.787197436" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC" valueType="string"/>
+<option id="gnu.cpp.compiler.option.other.other.787197436" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -fPIC -fopenmp" valueType="string"/>
 <option id="gnu.cpp.compiler.option.warnings.pedantic.1691338795" name="Pedantic (-pedantic)" superClass="gnu.cpp.compiler.option.warnings.pedantic" value="true" valueType="boolean"/>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1890773361" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
