--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadRawSpectrum0.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRKH.cpp"
 				>
 			</File>
