Add debug symbols to release build as they can be useful and now we know they don't break OpenMP useage. Re #1224

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -204,17 +204,14 @@ if os.name == 'posix':
 	conf.Finish()
 
 	cflags.append('-Wall')
+	# Debug symbols are useful in release too
+	cflags.append('-g')
+	lpts.append('-g')
+
 	if int(debug) :
 	    cflags.append('-O0')
-	    cflags.append('-g')
-	    lpts.append('-g')
 	else :
 	    cflags.append('-O3')
-#	    # it would be nice to have debug symbols here too
-#	    # but OpenMP seems to not like it
-#	    # need to investigate e.g. usining -g3 options
-#	    cflags.append('-g')
-#	    lpts.append('-g')
 
 	cflags.append(MantidBuild.getConfigFlags('gsl-config --cflags'))
 	lpts.append(MantidBuild.getConfigFlags('gsl-config --libs'))
