Algorithm for updating detector positions for raw file. Refs #1142.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -369,6 +369,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\UpdateInstrumentFromRaw.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\vms_convert.cpp"
 				>
 			</File>
@@ -680,6 +684,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\UpdateDAE.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\UpdateInstrumentFromRaw.h"
 				>
 			</File>
 			<File
