AddSampleLog() takes a string and adds it to a workspace's sample logs. SANS scripts now save the name of the mask file which can be retrieved with Python like pWS=mtd['992front_2D'];print pWS.getSampleDetails().getLogData('UserFile').value() refs #1237

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -183,6 +183,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\AddSampleLog.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\AnyShapeAbsorption.cpp"
 				>
 			</File>
@@ -510,6 +514,10 @@
 			>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\AbsorptionCorrection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\AddSampleLog.h"
 				>
 			</File>
 			<File
