Test for UpdateInstrumentFromRaw. Refs #1142.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -691,6 +691,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\UpdateInstrumentFromRawTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\vms_convert.h"
 				>
 			</File>
