--- a/Code/Mantid/Main/SConscript
+++ b/Code/Mantid/Main/SConscript
@@ -9,32 +9,28 @@ from socket import gethostname
 
 import MantidBuild
 
-
 Import('env')
 myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_MAIN',1)])
 #shared_list = env['SHARED_LIST']
 #static_list = env['STATIC_LIST']
-libList = env['MYLIBLIST']
-libDirList = env['MYLIBDIRLIST']
+libList = myenv['MYLIBLIST']
+libDirList = myenv['MYLIBDIRLIST']
+
+if os.name == 'posix':
+    # MG: By default, ld populates the symbol table with only those referenced within the linked libraries.
+    # Given that we use dlopen we may not necessarily reference all symbols at link time so we need to 
+    # ensure that the symbol table is populated with all symbols defined within the linked libraries.
+    myenv.Append(LINKFLAGS=['-Wl,--export-dynamic'])
 
 
 #GET LIST OF CPPS
 codeFolder = os.path.abspath('.')
 listCpps = MantidBuild.getCPPFiles(codeFolder)
 
-myenv_dynamic = myenv.Clone()
-myenv_dynamic.Append(LIBS=libList)
-myenv_dynamic.Append(LIBPATH=libDirList)
-myenv_dynamic.Append(LIBPATH='#Bin/Shared')
-shared = myenv_dynamic.Program('main',listCpps, PDB='main.pdb')
-
-#myenv_static = myenv.Clone()
-#myenv_static.Append(LIBS=libList)
-#myenv_static.Append(LIBPATH=libDirList)
-#myenv_static.Append(LIBPATH='#Bin/Static')
-#myenv_static.Append(LINKFLAGS=['-static'])
-#myenv_static.Program('main_static', listCpps, PDB='main_static.pdb')
+myenv.Append(LIBS=libList)
+myenv.Append(LIBPATH=libDirList)
+shared = myenv.Program('main',listCpps, PDB='main.pdb')
 
 retval = { 'shared': shared }
 Return('retval')
