Add ICostFunction interface to allow for cost functions other than least squares.
Add implementation of ICostFunctions:

CostFuncIgnorePosPeaks
CostFuncLeastSquares

Also added new attribute to Fit called "CostFunction" which
for now can be set to "Least squares" or "Ignore positive peaks".

Refs #1246

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -219,6 +219,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\CostFuncIgnorePosPeaks.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\CostFuncLeastSquares.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Fit.cpp"
 				>
 			</File>
@@ -357,6 +365,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidCurveFitting\CostFuncIgnorePosPeaks.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\CostFuncLeastSquares.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidCurveFitting\Fit.h"
 				>
 			</File>
@@ -398,6 +414,10 @@
 			</File>
 			<File
 				RelativePath=".\test\GaussianTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\ICostFunction.h"
 				>
 			</File>
 			<File
