Allow property values within the ConfigService to be changed at run time. Added a function to save the current configuration to a file. Re #1248

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -9,8 +9,16 @@
 #          This File will be overwritten with each new version of Mantid, however
 #          we will never alter your user.properties file so settings there are safe.
 
+# A semi-colon separated list of supported facilities
+supported.facilities = ISIS
 
-# where to find mantid plugin libraries
+# A semi-colon separated list of known instruments at the facility given as the last part of the key
+instrument.prefixes.ISIS = ALF;ARGUS;BOUNCE;CRISP;DEVA;EMU;ENGINX;EVS;EXESS;GEM;HERBI;HET;HIFI;HRPD;INES;INTER;IRIS;KARMEN;LAD;LET;LMX;LOQ;MAPS;MARI;MERLIN;MUSR;NESSIE;NIMROD;OFFSPEC;OSIRIS;PEARL;POLARIS;POLREF;PRISMA;RIKEN;ROTAX;SANDALS;SANS2D;SPIRAL;SURF;SXD;TOSCA;VESTA;VESUVIO;WISH;ZOOM
+
+# Set a default instrument
+default.instrument = 
+
+# Where to find mantid plugin libraries
 plugins.directory = .
 
 # Where to load instrument definition files from
