Before minimizer factory can be added need to move GSL specific code out of Fit. Refs #1254.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -255,6 +255,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GSLFunctions.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IkedaCarpenterPV.cpp"
 				>
 			</File>
@@ -414,6 +418,10 @@
 			</File>
 			<File
 				RelativePath=".\test\GaussianTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\GSLFunctions.h"
 				>
 			</File>
 			<File
