Update to ConfigService instrument prefix warnings. Also cleared some doxygen warnings. Re #1248

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -12,6 +12,9 @@
 # A semi-colon separated list of supported facilities
 supported.facilities = ISIS
 
+# Set a default facility
+default.facility = ISIS
+
 # A semi-colon separated list of known instruments at the facility given as the last part of the key
 instrument.prefixes.ISIS = ALF;ARGUS;BOUNCE;CRISP;DEVA;EMU;ENGINX;EVS;EXESS;GEM;HERBI;HET;HIFI;HRPD;INES;INTER;IRIS;KARMEN;LAD;LET;LMX;LOQ;MAPS;MARI;MERLIN;MUSR;NESSIE;NIMROD;OFFSPEC;OSIRIS;PEARL;POLARIS;POLREF;PRISMA;RIKEN;ROTAX;SANDALS;SANS2D;SPIRAL;SURF;SXD;TOSCA;VESTA;VESUVIO;WISH;ZOOM
 
