Add a new rebin algorithm that inherits from SimpleRebin, also added properties documentation strings to ReBin. The algorithm uses cubic splines for a more accurate interpolation than SimpleRebin. Exactly what you get is a little hard to understand, however. For example most interpolations can be used to give better estimates of integrals while on our data, of course, this isn't the right thing to do. Unit tests to follow re #1225

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib gsl.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib gsl_d.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
@@ -344,6 +344,10 @@
 			</File>
 			<File
 				RelativePath=".\src\Logarithm.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\InterpolatingRebin.cpp"
 				>
 			</File>
 			<File
@@ -790,6 +794,10 @@
 			</File>
 			<File
 				RelativePath=".\test\LogarithmTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\InterpolatingRebin.h"
 				>
 			</File>
 			<File
