--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -140,7 +140,7 @@ if os.name == 'nt':
 	else :
 		cflags = ['/Ox','/Oi', '/Ot', '/Oy', '/Ob2', '/GL', '/openmp', '/W3','/EHsc', '/MD', '/TP', '/DMS_VISUAL_STUDIO=1', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DGSL_DLL']
 		cflags.extend(['/DMS_VISUAL_STUDIO=1', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500'])
-		cflags.extend(['/DNOMINMAX','/D_USE_MATH_DEFINES', '/DWNT', '/wd4275', '/wd4996'])
+		cflags.extend(['/DNOMINMAX','/D_USE_MATH_DEFINES', '/DWNT', '/wd4251', '/wd4275', '/wd4996'])
 		cflags.extend(['/D_SCL_SECURE_NO_WARNINGS', '/D_CRT_SECURE_NO_WARNINGS', '/D_CRT_SECURE_NO_DEPRECATE', '/D_CRT_NONSTDC_NO_DEPRECATE', '/D_SCL_SECURE_NO_DEPRECATE'])
 		env.Append(LINKFLAGS=['/OPT:REF','/OPT:ICF','/OPT:NOWIN98','/ltcg'])
 elif platform.system() == 'Linux':
