Using correct SHLIB extension for OSX. This closes #1284.

--- a/Code/Mantid/PythonAPI/SConscript
+++ b/Code/Mantid/PythonAPI/SConscript
@@ -1,5 +1,6 @@
 #For MantidPythonAPI
 
+import platform
 import os
 import sys
 import MantidBuild
@@ -20,7 +21,10 @@ if os.name == 'posix':
    mylibraries = ['stdc++'] + libraries
    myenv['MYLIBLIST'] = mylibraries
    myenv.Append(MYLIBLIST='python' + sys.version[0:3])
-   myenv.Replace(SHLIBSUFFIX='.so')
+   if platform.system() == 'Darwin':
+      myenv.Replace(SHLIBSUFFIX='.dylib')
+   else:
+      myenv.Replace(SHLIBSUFFIX='.so')
    myenv.Append(MYLIBLIST='boost_python' + myenv['BOOST_APPEND'])
 # windows
 else:
