Improved auto-background in the peak fitting tool. re #1184

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -373,6 +373,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\ChebyshevTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\CompositeFunctionTest.h"
 				>
 			</File>
