WorkspaceGroup returned by LoadISISNexus confused MantidPlot because it didn't contain the groups own name. Monitors were read for all periods but only the first of them was used. re #1285

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -181,6 +181,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\EventList.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\EventWorkspace.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Histogram1D.cpp"
 				>
 			</File>
@@ -224,6 +232,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataObjects\CompressedWorkspace2D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\EventList.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\EventWorkspace.h"
 				>
 			</File>
 			<File
