--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -41,7 +41,7 @@
 				AdditionalOptions="/DWNT"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts/;inc;../Kernel/inc;../../Third_Party/include;..\..\Third_Party\include\OpenCascade;../../Third_Party/include/muParser"
-				PreprocessorDefinitions="_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="BOOST_ALL_DYN_LINK;_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="3"
 				OpenMP="true"
 				WarningLevel="3"
@@ -59,7 +59,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib opengl32.lib glu32.lib TKBO.lib TKPrim.lib TKBRep.lib TKernel.lib TKTopAlgo.lib TKMath.lib TKMesh.lib TKG2d.lib muparser_d.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib opengl32.lib glu32.lib TKBO.lib TKPrim.lib TKBRep.lib TKernel.lib TKTopAlgo.lib TKMath.lib TKMesh.lib TKG2d.lib muparser_d.lib boost_unit_test_framework-vc80-mt-gd-1_43.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
@@ -121,7 +121,7 @@
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts;inc;../Kernel/inc;../../Third_Party/include;../../Third_Party/include/OpenCascade;../../Third_Party/include/muParser"
-				PreprocessorDefinitions="_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="BOOST_ALL_DYN_LINK;_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				OpenMP="true"
 				WarningLevel="3"
@@ -138,7 +138,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib opengl32.lib glu32.lib TKBO.lib TKPrim.lib TKBRep.lib TKernel.lib TKTopAlgo.lib TKMath.lib TKMesh.lib TKG2d.lib muparser.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib opengl32.lib glu32.lib TKBO.lib TKPrim.lib TKBRep.lib TKernel.lib TKTopAlgo.lib TKMath.lib TKMesh.lib TKG2d.lib muparser.lib boost_unit_test_framework-vc80-mt-1_43.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 				OptimizeReferences="2"
@@ -639,11 +639,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\MantidGeometry\Math\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Math\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
