--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -25,32 +25,31 @@ default.instrument =
 plugins.directory = .
 
 # Where to load instrument definition files from
-instrumentDefinition.directory = ../../../../Test/Instrument
+instrumentDefinition.directory = ../../../Test/Instrument
 
 # Where to load parameter definition files from
-parameterDefinition.directory = ../../../../Test/Instrument
+parameterDefinition.directory = ../../../Test/Instrument
 
 # Location of Python scripts that are required for certain aspects of Mantid to function
 # correctly, i.e. customized interfaces
 #
 # WARNING: Altering this value will almost certainly break Mantid functionality
 #
-requiredpythonscript.directories = ../../PythonAPI/scripts/Crystallography;../../PythonAPI/scripts/Disordered Materials;\
-../../PythonAPI/scripts/Engineering;../../PythonAPI/scripts/Excitations;../../PythonAPI/scripts/Large Scale Structures;../../PythonAPI/scripts/Molecular Spectroscopy;\
-../../PythonAPI/scripts/Muons;../../PythonAPI/scripts/Neutrinos;../../PythonAPI/scripts/SANS
+requiredpythonscript.directories = ../PythonAPI/scripts/Crystallography;../PythonAPI/scripts/Disordered Materials;/../PythonAPI/scripts/Engineering;../PythonAPI/scripts/Excitations;../PythonAPI/scripts/Large Scale Structures;../PythonAPI/scripts/Molecular Spectroscopy;\
+../PythonAPI/scripts/Muons;../PythonAPI/scripts/Neutrinos;../PythonAPI/scripts/SANS
 
 # Additional directory for Python scripts. This is added to the Python path by the
 # Python API (DEPRECATED: Use pythonscripts.directories)
 # Note that this is NOT recursive
-pythonscripts.directory = ../../PythonAPI/scripts
+pythonscripts.directory = ../PythonAPI/scripts
 
 # Additional directories for Python scripts. These are added to the Python path by the
 # Python API.
 # Note that they are NOT recursive
-pythonscripts.directories = ../../PythonAPI/scripts
+pythonscripts.directories = ../PythonAPI/scripts
 
 # The locations of Python algorithms that are to be loaded at startup
-pythonalgorithms.directories = ../../PythonAPI/PythonAlgorithms
+pythonalgorithms.directories = ../PythonAPI/PythonAlgorithms
 
 # A semi-colon(;) separated list of directories to use to search for data
 # Use forward slash / for all paths
